[gd_scene load_steps=2 format=3 uid="uid://bj8ac7p75k6oo"]

[ext_resource type="Script" uid="uid://c3any4im3ikp3" path="res://scenes/controller_profile.gd" id="1_m3t74"]

[node name="ControllerProfile" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_m3t74")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ControllerProfile" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Select Device:"

[node name="DeviceDropdown" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="RefreshButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ColumnMappingContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ProfileInputContainer" type="HBoxContainer" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2

[node name="ProfileLineEdit" type="LineEdit" parent="VBoxContainer/ButtonContainer/ProfileInputContainer"]
layout_mode = 2

[node name="ProfileDropdownButton" type="Button" parent="VBoxContainer/ButtonContainer/ProfileInputContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2

[node name="SetActiveButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2

[node name="InputMappingPanel" type="Panel" parent="."]
visible = false
layout_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="InputMappingPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="InputMappingPanel/VBoxContainer"]
layout_mode = 2
text = "Press any button on your controller"

[node name="CancelButton" type="Button" parent="InputMappingPanel/VBoxContainer"]
layout_mode = 2
text = "Cancel"
